<resources>
    <string name="app_name">Drink Eat</string>
    <string name="btn_login_txt">Se connecter</string>
    <string name="btn_register_txt">S\'inscrire</string>
    <string name="register_title">Inscription</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="password2">Retaper votre mot de passe</string>
    <string name="register">S\'inscrire</string>
</resources>
